--- a/eva-vm/.vscode/settings.json
+++ b/eva-vm/.vscode/settings.json
@@ -52,6 +52,7 @@
         "cstring": "cpp",
         "ctime": "cpp",
         "ratio": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "iomanip": "cpp"
     }
 }
